force-app/main/default/objects/CWS_Minimum_Commit__c/CWS_Minimum_Commit__c.object-meta.xml
<CustomObject>
    <label>Minimum Commit</label>
    <nameField>
        <displayFormat>MIN-{000000}</displayFormat>
        <label>Minimum Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minimum Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>