force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Minimum Commits</relationshipLabel>
    <relationshipName>Minimum_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>