force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Period__c</fullName>
    <inlineHelpText>Master-detail which links Min Commits to the billing period for the same month/year</inlineHelpText>
    <label>Billing Period</label>
    <referenceTo>CWS_BillingPeriod__c</referenceTo>
    <relationshipLabel>Minimum Commits</relationshipLabel>
    <relationshipName>Minimum_Commits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>