force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Case_Safe_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Id</label>
    <type>Text</type>
</CustomField>