force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>