force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>CWS_Month_Year__c</fullName>
    <inlineHelpText>Field value format (MMM-YY)</inlineHelpText>
    <label>Month Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>