force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Monthly_Minimum_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Monthly_Minimum_Commit__c</fullName>
    <label>Monthly Minimum Commit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>