force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Num_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Num_Monthly_Amount__c</fullName>
    <inlineHelpText>Minimum Commit Amount per Month</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>