force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Minimum Commits</relationshipLabel>
    <relationshipName>Minimum_Commits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>