force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Prior_Billing_Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Billing_Commit_Amount__c</fullName>
    <formula>CWS_Billing_Period__r.CWS_CMSCommitAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for audit reporting - Pulls the commit amount from the Opportunity Prior Billing Period</inlineHelpText>
    <label>Prior Billing Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>