force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Prior_Billing_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Billing_MRR__c</fullName>
    <formula>CWS_Billing_Period__r.CWS_CMSMinCommitProductBilling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for audit reporting - Pulls the MRR from the Opportunity Prior Billing Period</inlineHelpText>
    <label>Prior Billing MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>