force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Prior_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Billing_Period__c</fullName>
    <formula>CWS_Opportunity__r.CWS_Prior_Billing_Period__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for audit reporting - Pulls the name of the Opportunity Prior Billing Period</inlineHelpText>
    <label>Prior Billing Period</label>
    <type>Text</type>
</CustomField>