force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Product_Incremental_Increase__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Incremental_Increase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Incremental Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>