force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Quota_Credit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quota_Credit__c</fullName>
    <formula>IF( CWS_Monthly_Minimum_Commit__c &lt; CWS_Product_Incremental_Increase__c , CWS_Monthly_Minimum_Commit__c, 

IF( (CWS_Monthly_Minimum_Commit__c &gt;= CWS_Product_Incremental_Increase__c) , CWS_Product_Incremental_Increase__c, 

NULL )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>