force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Snapline_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Snapline_Billing_Period__c</fullName>
    <formula>CWS_Opportunity__r.CWS_Snapline_Billing_Period__r.Name</formula>
    <inlineHelpText>Used for audit reporting - Pulls the name of the Snapline Billing Period from the Opportunity</inlineHelpText>
    <label>Snapline Billing Period</label>
    <type>Text</type>
</CustomField>