force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Snapline_Min_Commit_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Snapline_Min_Commit_MRR__c</fullName>
    <formula>CWS_Billing_Period__r.CWS_CMSMinCommitProductBilling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for audit reporting - Pulls the Min Commit MRR from the Snapline Billing Period on the Opportunity</inlineHelpText>
    <label>Snapline Min Commit MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>