force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Snapline_True_Up__c.field-meta.xml
<CustomField>
    <fullName>CWS_Snapline_True_Up__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Snapline True Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>