force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Start_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>CWS_Start_Of_Month__c</fullName>
    <description>Added 4-29-2021 to support sorting by date.  Legacy data updated, Use the first day of the month</description>
    <label>Start Of Month</label>
    <type>Date</type>
</CustomField>