force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Text_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Text_Currency_Code__c</fullName>
    <formula>TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Currency of Minimum Commit record</inlineHelpText>
    <label>Currency</label>
    <type>Text</type>
</CustomField>