force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_Unique_Opp_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>CWS_Unique_Opp_Month_Year__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Opp Month Year</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>