force-app/main/default/objects/CWS_Minimum_Commit__c/fields/CWS_WonCommitAmount__c.field-meta.xml
<CustomField>
    <fullName>CWS_WonCommitAmount__c</fullName>
    <label>Won Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>