force-app/main/default/objects/CWS_Minimum_Commit__c/validationRules/CWS_CreateOnlyonMasterOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_CreateOnlyonMasterOpp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
ISNEW(), 
CWS_Opportunity__r.CWS_Master__c = false
)</errorConditionFormula>
    <errorMessage>Minimum Commit can only be created on master opportunity</errorMessage>
</ValidationRule>