force-app/main/default/objects/CWS_Minimum_Commit__c/validationRules/CWS_MonthYearFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_MonthYearFormat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
OR(CASE(UPPER(LEFT(CWS_Month_Year__c,3)),
&quot;JAN&quot;,1,
&quot;FEB&quot;,1,
&quot;MAR&quot;,1,
&quot;APR&quot;,1, 
&quot;MAY&quot;,1,
&quot;JUN&quot;,1,
&quot;JUL&quot;,1,
&quot;AUG&quot;,1,
&quot;SEP&quot;,1,
&quot;OCT&quot;,1,
&quot;NOV&quot;,1,
&quot;DEC&quot;,1,
0)=0
, LEN(CWS_Month_Year__c)!=6
, !REGEX(RIGHT(CWS_Month_Year__c,3),&quot;-[0-9]{2}&quot;)))</errorConditionFormula>
    <errorMessage>Month Year needs to be in MMM-YY format e.g. Jan-20</errorMessage>
</ValidationRule>