force-app/main/default/objects/CWS_Minimum_Commit__c/validationRules/Monthly_minimum_Commitment_cant_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_minimum_Commitment_cant_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( CWS_Monthly_Minimum_Commit__c )  || (CWS_Monthly_Minimum_Commit__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>CWS_Monthly_Minimum_Commit__c</errorDisplayField>
    <errorMessage>Monthly Minimum Commitment cant be null or Negative. It should be 0 or actual value.</errorMessage>
</ValidationRule>